# lib-version

./: .gitignore  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: release.yml
src/libversion/: __init__.py  version.py
